Replace JSON parset to Circe